avformat/flvdec: use AV_PKT_DATA_NEW_EXTRADATA for h264 too

Fixes Ticket 3787

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>